comprehensive_cpp/V20.02/md/introduction.md
<!-- ./md/introduction.md -->
# イントロダクション <a id="SS_1"></a>
本ドキュメントは、 C++でのプログラミング、 デザイン、
ソフトウェア開発におけるプロセス、ワークフロー等に対する原理、原則をまとめたものである。

ソフトウェア工学を実践的に学習した者には明らかなように、
ソフトウェア工学はトレードオフを扱う学問である。
従って、後述する、しないにかかわらずソフトウェアの原理、原則は、
常にそれが正しいとは限らず、またそれらが互いに矛盾することもある。
老子の至言「道の道とすべきは、常の道に非ず」のごときものである。

ソフトウェア開発の現場においては、このことを常に念頭に置き、
慎重且つ深い洞察を以って、これらを実践すべきである。

## 本ドキュメントの目的 <a id="SS_1_1"></a>
「守破離」とは、日本の伝統武道、技芸の修行者が歩むべき習熟モデルである。
「守」、「破」、「離」それぞれが以下のような修行者の習熟レベルと、それに基づいた行動規範を表す。

* 「守」- 未熟な修行者であり、まずは、先人の残した「形(型)」を無批判に受け入れ、それを反復すること
* 「破」-「形」に習熟した修行者であり、「形」に自らの工夫を加えながら、より高いレベルを探求すること
* 「離」- 最高レベルに到達した修行者であり、自らが「形」を作り出すこと

このドキュメントは、

* 「守」のレベルにあるC++プログラマに「形」を提供すること
* そのようなプログラマの「破」への道しるべとなること
* このドキュメントを批判的に読むことで、「破」のプログラマに「離」への切っ掛けを与えること
* C++で開発を行うチームが作り出すソースコードに規律や整合性を与えること、
  もしくは守るべき規範のボトムラインを示すこと

を目的とする。

## 本ドキュメントの次に <a id="SS_1_2"></a>
本ドキュメントを読み、理解したプログラマの次のステップのために、
巻末に「[参考文献](bibliography.md#SS_22)」を設けた。

それらを読破し、合理的理由でこれらに倣い、もしくは批判できるようになることで、
「守」が終了し、「破」へと進むことができると考えられる。

## 改訂履歴 <a id="SS_1_3"></a>
* V20.02
    * プログラミング規約
        * 関数の戻り値型にstd::optionalを追加
        * unionの代わりのstd::variantを追加
    * std::weak_ptrの解説を追加
    * std::pmrの解説を追加

    * std::weak_ptrの解説を追加
    * pmrの解説を追加
    * templateメタプログラミング
        * 浮動小数点IsEqual
        * FixedPoint
        * std::enable_ifをコンセプトを使用しリファクタリング
    * 用語説明追加
        * モジュール
        * コルーチン
        * 畳み込み式
        * テンプレートのテクニックに畳み込み式の使用
        * explicit
        * コンセプト
        * <=>
* V20.01
    * C++20のシンタックスを導入
    * C++の進化と主な変更点を追加

* V18.06
    * アーキテクチャに非同期処理用のサンプルコードを追加

* V18.05
    * テーブルの体裁を整えた

* V18.04
    * インデックスを廃止
    * depsにCMakeLists.txtを追加

* V18.03
    * 全体のインデックスを最小にした
    * 各章ごとにインデックスをつけた


## 本ドキュメントの修正・改善 <a id="SS_1_4"></a>
本ドキュメントをソフトウェア開発のルールとして採用したチームのプログラマにとって、
本ドキュメントは守るべき「形」であるが、「形」であることは不変であることを意味しない。
むしろ、ソフトウェア工学の進歩やチームの習熟に合わせ、その時点で最も正しいであろうルール、
プラクティスを積極的に導入することで、「形」の陳腐化を防ぐべきである。
このことは、スコット・メイヤーズ氏によるEffective C++の第1版から第3版、
およびEffective Modern C++までの変遷を読むことで、より深い理解が得られるはずである。
従って、「破」や「離」のレベルにあるプログラマは、
このドキュメントや、このドキュメントから派生した(もしくは、それとは無関係な)
チームのルールの内容を定期的に見直し、より高いレベルへと改善させるよう努めてほしい。

## 例示したコードの説明 <a id="SS_1_5"></a>
次章以降では、ソースコードを使って説明を行う場合がある。このような場合の注意点を述べる。

* 「...」のみで構成された行は、ソースコードの省略を表す。
* 特定の規則、法則、慣習等を説明するためのソースコードは、シンプルさを優先するため、
  その他の規則、法則、慣習に従っていない場合がある。特に識別子に関しては、
  「[命名規則](naming_practice.md#SS_6)」に従っていない場合が多い。
  また、一般にSTLのコンテナクラスやstd::stringをnewする必要はないが、
  コードの動作を示すためにあえてそのようにする場合がある。
* ソースコード内に動作説明のような本来不要なコメントがあるのは、
  読者にその意味を知らせるためであるため、製品コードのコメントをこのようにするべきではない。
* 例示したコードの動作の確認、明示のために
  [google test(gtest)](http://opencv.jp/googletestdocs/primer.html)のアサーション(下表)を使用する。

|アサーションマクロ  | 意味                                     |
|:-------------------|:-----------------------------------------|
| ASSERT_TRUE(x)     | xがtrue                                  |
| ASSERT_FALSE(x)    | xがfalse                                 |
| ASSERT_EQ(x, y)    | (x == y)がtrue                           |
| ASSERT_NE(x, y)    | (x != y)がtrue                           |
| ASSERT_GE(x, y)    | (x >= y)がtrue                           |
| ASSERT_GT(x, y)    | (x >  y)がtrue                           |
| ASSERT_LE(x, y)    | (x <= y)がtrue                           |
| ASSERT_LT(x, y)    | (x <  y)がtrue                           |
| ASSERT_STREQ(x, y) | (std::string(x) == std::string(y))がtrue |
| ASSERT_DEATH(x, y) | xを実行するとアボートすればtrue          |
| ASSERT_THROW(x, y) | xを実行するとy例外が発生すればtrue       |

* 問題を示すために掲載したコードは、実行すると不具合を発生させることがある。
  そういった場合、下記のように単体テストのラベルにDISABLED\_を付けることで、
  その実行を抑止することがある。

```cpp
    TEST(DISABLED_Xxx, yyy)
    {
        // 単体テスト
    }
```

## 本ドキュメントでの言葉の使い方の注意 <a id="SS_1_6"></a>
* 参照
    * 「～を参照する」というような文脈で使われる**「参照」**はそのまま使用する。
    * C++での参照型を表す**参照**は使わず、代わりに**「リファレンス」**を使用する。
* 例外
    * 「～の場合は例外である」というような文脈で使われる**「例外」**はそのまま使用する。
    * C++でthrowすると発生する事象を表す**例外**は使わず、代わりに**「エクセプション」**を使用する。
* classとクラス
    * **class**はC++のキーワードとして使用する。
    * **クラス**は上記以外で使用する。
* プログラミングとコーディング、ソースコードとコード、インスタンスとオブジェクト
    * 同じような意味で使用する。


## このドキュメントの構成 <a id="SS_1_7"></a>
___

- [ソフトウェアプラクティス](software_practice.md#SS_2)
- [プログラミング規約](programming_convention.md#SS_3)
- [コード解析](code_analysis.md#SS_4)
- [コーディングスタイル](coding_style.md#SS_5)
- [命名規則](naming_practice.md#SS_6)
- [コメント](comment.md#SS_7)
- [SOLID](solid.md#SS_8)
- [デザインパターン](design_pattern.md#SS_9)
- [アーキテクチャ](architecture.md#SS_10)
- [開発プロセスとインフラ](process_and_infra.md#SS_11)
- [並行処理](concurrency.md#SS_12)
- [テンプレートメタプログラミング](template_meta_programming.md#SS_13)
- [ダイナミックメモリアロケーション](dynamic_memory_allocation.md#SS_14)
- [デバッグ](debug.md#SS_15)
- [開発ツール](dev_tools.md#SS_16)
- [deps](deps.md#SS_17)
- [C++の進化と主な変更点](cpp_improve.md#SS_18)
- [用語解説](term_explanation.md#SS_19)
- [演習](exercise_q.md#SS_20)
- [解答](exercise_a.md#SS_21)
- [参考文献](bibliography.md#SS_22)
- [あとがき](afterword.md#SS_23)
- [Sample Code](sample_code.md#SS_24)


